2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: changed text from Libray to Library

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: Fixed a problem with link to module
	library because in trunk version there is an additional field to search
	modules.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php: Added a default cover
	for PDF reports.
	include/help/ja/help_reporting_advanced_tab.php,
	include/help/en/help_reporting_advanced_tab.php,
	include/help/es/help_reporting_advanced_tab.php: Documented new macro
	called REPORT_NAME

	MERGED FROM 4.0.3

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: Added a link to module library
	in create module view.

	MERGED FROM 4.0.3

2013-01-07  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/reporting/graph_builder.php: Fixed bug that
	unspecified graph name was displayed in the header line
	when creating a new custom graph. Merged from branch 4.0.

2013-01-07  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alert_macros.php: Added macro _email_tag_.

2013-01-05 Sancho Lerena <slerena@artica.es>

        * include/styles/pandora.css: Fixed footer problem
        in Chrome. 


2013-01-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/config_process.php: Removed php notice in this view.

2013-01-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_alert_macros.php
	 include/help/es/help_alert_macros.php: Added macro _email_tag_
	 to these help screens.
	* include/functions_reports.php: Added exception to templates when
	report types are displayed.
	 
2013-01-03 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/resource_registration.php,
	extensions/resource_exportation.php,
	operation/events/event_statistics.php,
	operation/events/events_list.php,
	operation/reporting/reporting_viewer.php,