@@ -1,3 +1,10 @@
+2013-01-04 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* godmode/agentes/agent_template.php: Fixed duplication of modules
+	when template is applied several times. 
+	
+	Bug id: #3599442
+
 2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* godmode/agentes/module_manager.php: changed text from Libray to Library
